# bedrock

./: README.md  bedrock_mistral.ipynb  pyproject.toml
