[tool.poetry]
name = "bedrock"
version = "0.1.0"
description = ""
authors = ["Steven Sung <sysung98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.79"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
